--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         font-size: 1.6vh;
       }
     </style>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
